HTML changes: - Added semenatic tags (main, footer) to provide landmarks for accesibility - Changed image path - Added more descriptive alt text for the qr image CSS changes: - Removed width: 100vw; (can cause horizontal scroll for some users) - Removed component height and width. Added a component max-width property instead. - Implemented a Modern CSS reset - Changed border-radius values to rem instead of % values - Gave the component itself a 1em margin so it always has some margin even on narrow screens - Changed all % values with em values to avoid inconsistency

--- a/style.css
+++ b/style.css
@@ -1,10 +1,81 @@
 /* CSS Reset */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+
 
 /* Colors for the Document */
 :root {
@@ -17,7 +88,6 @@
 
 body {
     min-height: 100vh;
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,30 +97,29 @@ body {
 
 
 .qr-container {
-    width: 338px;
-    height: 524px;
-    border: 1px solid black;
+    max-width: 22.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--component-bg-color);
-    border-radius: 5%;
+    border-radius: 1rem;
+    margin: 1em;
 }
 
 .qr-image {
     width: auto;
     height: auto;
-    padding: 5%;
+    padding: 1em;
 }
 
 .qr-image img {
     width: 100%;
     height: 100%;
-    border-radius: 5%;
+    border-radius: 1rem;
 }   
 
 .qr-title {
-    padding: 8%;
+    padding: 1em;
     text-align: center;
     font-size: 1.25em;
     color: var(--component-text-color);
@@ -59,11 +128,12 @@ body {
 
 .qr-desc {
     text-align: center;
-    padding: 0 8% 8% 8%;
+    padding: 1em;
+    padding-top: 0;
     font-size: 15px;
     color: var(--component-text-color);
     font-weight: 400;
-    opacity: 75%s;
+    opacity: 75%;
 }
 
 .attribution { font-size: 11px;
